crates/component-shape-gpui/tests/ui/missing_state.stderr
error: unexpected end of input, missing `type State = ...;` or `state = ...;`
 --> tests/ui/missing_state.rs:3:1
  |
3 | / component_shape! {
4 | |     pub struct MissingState {
5 | |         value = String;
6 | |     }
7 | | }
  | |_^
  |
  = note: this error originates in the macro `component_shape` (in Nightly builds, run with -Z macro-backtrace for more info)
