crates/component-shape-gpui/tests/ui/missing_state.rs
use component_shape_gpui::component_shape;

component_shape! {
    pub struct MissingState {
        value = String;
    }
}

fn main() {}
